@@ -1,1 +1,1 @@
-echo 'class Main { say "hello, World" }' | perl mp6.pl -Bperl5
+echo 'class Main { say "hello, World" }' | perl perlito.pl -Bperl5
