@@ -1,3 +1,4 @@
+#!/usr/local/bin/perl
 package main;
 
 use FindBin '$Bin';
@@ -306,7 +307,7 @@ elsif ( $backend eq 'python' ) {
     require Perlito::Python::Emitter;
     $result .= "# Do not edit this file - Generated by $::_V6_COMPILER_NAME $::_V6_COMPILER_VERSION\n";
     $result .= "\n";
-    $result .= "from miniperl6.python.runtime import *\n";
+    $result .= "from perlito.python.runtime import *\n";
     $result .= "from Perlito__Python__Prelude import *\n";
     $result .= "import __builtin__\n";
     $result .= "__all__ = []\n";
@@ -444,15 +445,7 @@ elsif ( $backend eq 'go' ) {
 }
 elsif ( $backend eq 'perl5' ) {
     $result .=  "# Do not edit this file - Generated by $::_V6_COMPILER_NAME $::_V6_COMPILER_VERSION\n";
-    $result .=  "use v5;\n";
-    $result .=  "use utf8;\n";
-    $result .=  "use strict;\n";
-    $result .=  "use warnings;\n";
-    $result .=  "no warnings ('redefine', 'once', 'void', 'uninitialized', 'misc', 'recursion');\n";
-    $result .=  "use Perlito::Perl5::Runtime;\n";
-    $result .=  "our \$MATCH = Perlito::Match->new();\n";
     $result .= CompUnit::emit_perl5_program( \@comp_unit );
-    $result .=  "1;\n";
 
     if ( $execute ) {
         local @ARGV = @args;
