@@ -7,10 +7,10 @@ perl util-perl5/make.pl -Cperl5 && rm -rf lib5 && mv lib5-new lib5
 perl util-perl5/make.pl -Cjs && rm -rf libjs && mv libjs-new libjs
 
 rm tmp.out
-perl mp6.pl -Clisp-bin util/mp6.pl && mv tmp.out mp6-lisp
+perl perlito.pl -Clisp-bin util/perlito.pl && mv tmp.out perlito-lisp
 
 rm 6.out
-perl mp6.pl -Cgo-bin util/mp6.pl && mv 6.out mp6-go
+perl perlito.pl -Cgo-bin util/perlito.pl && mv 6.out perlito-go
 
 . util-js/make-perlito-js.sh
 
