@@ -197,15 +197,7 @@ mp6 [switches] [programfile]
         }
         if $backend eq 'perl5' {
             say "# Do not edit this file - Generated by ", $_V6_COMPILER_NAME, " ", $_V6_COMPILER_VERSION;
-            say "use v5;";
-            say "use utf8;";
-            say "use strict;";
-            say "use warnings;";
-            say "no warnings ('redefine', 'once', 'void', 'uninitialized', 'misc', 'recursion');";
-            say "use Perlito::Perl5::Runtime;";
-            say 'our $MATCH = Perlito::Match->new();';
             print CompUnit::emit_perl5_program( $comp_units );
-            say "1;";
         }
         if $backend eq 'js' {
             say "// Do not edit this file - Generated by ", $_V6_COMPILER_NAME, " ", $_V6_COMPILER_VERSION;
@@ -222,7 +214,7 @@ mp6 [switches] [programfile]
         if $backend eq 'python' {
             say "# Do not edit this file - Generated by ", $_V6_COMPILER_NAME, " ", $_V6_COMPILER_VERSION;
             say "";
-            say "from miniperl6.python.runtime import *";
+            say "from perlito.python.runtime import *";
             say "from Perlito__Python__Prelude import *";
             say "import __builtin__";
             say "__all__ = []";
