@@ -27,15 +27,7 @@ sub compile {
     die "Syntax error" unless @comp_unit;
     my $result;
     $result .=  "# Do not edit this file - Generated by $::_V6_COMPILER_NAME $::_V6_COMPILER_VERSION\n";
-    $result .=  "use v5;\n";
-    $result .=  "use utf8;\n";
-    $result .=  "use strict;\n";
-    $result .=  "use warnings;\n";
-    $result .=  "no warnings ('redefine', 'once', 'void', 'uninitialized', 'misc', 'recursion');\n";
-    $result .=  "use Perlito::Perl5::Runtime;\n";
-    $result .=  "our \$MATCH = Perlito::Match->new();\n";
     $result .= CompUnit::emit_perl5_program( \@comp_unit );
-    $result .=  "1;\n";
     return $result;
 }
 
